Fix a bug that was introduced with new auto-call feature when only bams provided.  Fix so that user is only prompted when alignments only loaded.

--- a/assets/css/sass/site.sass
+++ b/assets/css/sass/site.sass
@@ -1329,7 +1329,7 @@ header
 
   padding-left: 0px
   padding-right: 0px
-  margin-top: -30px
+  margin-top: -20px
   margin-bottom: 0px
   padding-bottom: 0px
 
